<resources>
    <string name="app_name">TavernTable</string>
    <string name="tavern_table_text">Tavern Table</string>
    <string name="usernameStr">Username</string>
    <string name="passwordStr">Password</string>
    <string name="buttonText">Submit</string>
    <string name="signUpText">Sign Up</string>
    <string name="returningUserText">Returning User</string>
    <string name="confirmPasswordStr">Confirm Password</string>
    <string name="EmailStr">Email</string>
    <string name="test_user_session">Test User Session</string>
    <string name="new_user">New User</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="battle_button_desc">Battle Button</string>
    <string name="character_sheet_button_desc">Character sheet button</string>
    <string name="notes_button_desc">Notes button</string>
    <string name="test_dm_session_string">test dm session</string>
    <string name="player_text">Player</string>
    <string name="dungeon_master_text">Dungeon Master</string>
    <string name="i_am_a_text">I am a...</string>
    <string name="submit_text">Submit</string>
    <string name="add_a_new_friend_text">Add a new friend</string>
    <string name="placeholder_text">placeholder</string>
    <string name="stats_button_text">stats button</string>
    <string name="other_button_text">Other button</string>
    <string name="health_button_text">Health button</string>
    <string name="magic_button_text">Magic button</string>
    <string name="inventory_button_text">Inventory button</string>
    <string name="personality_button_text">Personality button</string>
    <string name="feats_traits_button_text">Feats/traits button</string>
    <string name="proficiencies_hint_text">This is where your proficiencies go.</string>
    <string name="strength_text">Strength</string>
    <string name="dexterity_text">Dexterity</string>
    <string name="constitution_text">Constitution</string>
    <string name="intelligence_text">Intelligence</string>
    <string name="wisdom_text">Wisdom</string>
    <string name="charisma_text">Charisma</string>
    <string name="profieciencies_text">Profieciencies</string>
    <string name="proficiency_bonus_text">Proficiency Bonus</string>
    <string name="saving_throws_text">Saving Throws</string>
    <string name="armor_class_text">Armor Class</string>
    <string name="initiative_text">Initiative</string>
    <string name="speed_text">Speed</string>
    <string name="maximum_hit_points_text">Maximum Hit Points</string>
    <string name="current_hit_points_text">Current Hit Points</string>
    <string name="temporary_hit_points_text">Temporary Hit Points</string>
    <string name="hit_dice_text">Hit Dice</string>
    <string name="name_text">Name</string>
    <string name="character_name_text">Character Name</string>
    <string name="class_text">Class</string>
    <string name="level_text">Level</string>
    <string name="race_text">Race</string>
    <string name="background_text">Background</string>
    <string name="alignment_text">Alignment</string>
    <string name="player_name_text">Player Name</string>
    <string name="experience_points_text">Experience Points</string>
    <string name="this_is_where_your_saving_throws_go_text">This is where your saving throws go.</string>
    <string name="item_proficiences_text">Item Proficiences</string>
    <string name="personality_traits_text">Personality Traits</string>
    <string name="ideals_text">Ideals</string>
    <string name="bonds_text">Bonds</string>
    <string name="flaws_text">Flaws</string>
    <string name="features_amp_traits_text"><![CDATA[Features & Traits]]></string>
    <string name="abilities_text">Abilities</string>
    <string name="weapons_text">Weapons</string>
    <string name="spells_text">Spells</string>
    <string name="didNotSave">Data wasn\'t saved. Please check internet connection.</string>
    <string name="gold_pieces_text">Gold Pieces</string>
    <string name="silver_pieces_text">Silver Pieces</string>
    <string name="copper_pieces_text">Copper Pieces</string>
    <string name="spell_casting_ability_text">Spell Casting Ability</string>
    <string name="spell_save_dc_text">Spell Save DC</string>
    <string name="spell_attack_bonus_text">Spell Attack Bonus</string>
    <string name="equipment_text">Equipment</string>
    <string name="languages">Languages</string>
    <string name="item_proficiencies_text">Item Proficiencies</string>
    <string name="passive_wisdom_text">Passive Wisdom</string>
    <string name="inspiration_text">Inspiration</string>
</resources>
