<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tavern_table_text"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:inputType="textVisiblePassword"
        android:hint="@string/usernameStr"
        app:layout_constraintBottom_toTopOf="@id/registerEmailField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/registerEmailField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:inputType="textVisiblePassword"
        android:hint="@string/EmailStr"
        app:layout_constraintBottom_toTopOf="@id/registerGuideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/registerPasswordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"
        android:hint="@string/passwordStr"
        app:layout_constraintTop_toBottomOf="@id/registerGuideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/registerConfirmField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword"
        android:hint="@string/confirmPasswordStr"
        app:layout_constraintTop_toBottomOf="@id/registerPasswordField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.Guideline
        android:id="@+id/registerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginBottom="144dp"
        android:text="@string/buttonText"
        app:layout_constraintEnd_toEndOf="@+id/registerConfirmField"
        app:layout_constraintTop_toBottomOf="@+id/registerConfirmField" />

</android.support.constraint.ConstraintLayout>