<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="false"
        tools:context=".SheetStatsActivity" >

        <GridLayout
            android:id="@+id/glStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:columnCount="3"
            android:rowCount="3"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_centerInParent="true">

            <LinearLayout
                android:id="@+id/llStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_column="0"
                android:layout_row="0"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strength_text"
                    android:textColor="#FFFFFF"
                    android:background="#555555"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_text"
                    android:inputType="text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_column="1"
                android:layout_row="0"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dexterity_text"
                    android:textColor="#FFFFFF"
                    android:background="#555555"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_text"
                    android:inputType="text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_column="2"
                android:layout_row="0"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constitution_text"
                    android:textColor="#FFFFFF"
                    android:background="#555555"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_text"
                    android:inputType="text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llInt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_column="0"
                android:layout_row="1"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intelligence_text"
                    android:textColor="#FFFFFF"
                    android:background="#555555"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_text"
                    android:inputType="text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llWis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_column="1"
                android:layout_row="1"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wisdom_text"
                    android:textColor="#FFFFFF"
                    android:background="#555555"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_text"
                    android:inputType="text"/>

            </LinearLayout>

            <LinearLayout
            android:id="@+id/llCha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_column="2"
            android:layout_row="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charisma_text"
                android:textColor="#FFFFFF"
                android:background="#555555"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_text"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_column="1"
            android:layout_row="2"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proficiency_bonus_text"
                android:textColor="#FFFFFF"
                android:background="#555555"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_text"
                android:inputType="text"/>

        </LinearLayout>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/glStats">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profieciencies_text"
                android:textColor="#FFFFFF"
                android:background="#555555" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/proficiencies_hint_text"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>