<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StandIn_SignInActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tavern_table_text"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="98dp"
        android:layout_marginTop="168dp"
        android:hint="@string/usernameStr"
        android:inputType="textVisiblePassword"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:hint="@string/passwordStr"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginBottom="144dp"
        android:text="@string/buttonText"
        app:layout_constraintEnd_toEndOf="@+id/passwordField"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/signInBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:backgroundTint="@color/forestGreen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>