<?xml version="1.0" encoding="utf-8"?>
<!-- Top ScrollView. Used to change background color -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0e232e"
    android:orientation="vertical"
    tools:context=".SheetCharacterBackgroundActivity">

    <!-- Light gray box to hold character data inputs.  -->
    <LinearLayout
        android:id="@+id/llFeatures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:background="#AAAAAA">
            <!-- Character class field. -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/features_amp_traits_text"
                    android:textColor="#FFFFFF"
                    android:background="#555555"/>

                <EditText
                    android:id="@+id/etFeatures"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/placeholder_text"
                    android:inputType="text"
                    android:background="#FFFFFF"/>
            </LinearLayout>

        <!-- Submit button to send changes to the server -->
        <Button
            android:id="@+id/bSheetFeatures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/submit_text"/>

    </LinearLayout>

</ScrollView>